<resources>
    <string name="app_name" translatable="false">QIS Surveillance</string>
    <string name="developers">EyeSeeTea LTD</string>
    <string name="empty_string" translatable="false"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="review">Review</string>
    <string name="send">Send</string>
    <string name="score">Score</string>
    <string name="number_zero">0</string>
    <string name="number_zero_percentage">0 % </string>
    <string name="title_id">ID</string>
    <string name="title_name">Name</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="symbolPlus" translatable="false">+</string>
    <string name="symbolMinus" translatable="false">-</string>
    <string name="symbolCross" translatable="false">X</string>
    <string name="rdtPositive" translatable="false">Positive</string>
    <string name="rdtNegative" translatable="false">Negative</string>
    <string name="rdtNotTested" translatable="false">Not Tested</string>
    <string name="rdtCancel" translatable="false">Cancel</string>
    <string name="plus">+</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="settings_menu_about">About</string>
    <string name="settings_menu_configuration">Settings</string>
    <string name="settings_menu_delete">Remove all sent Surveys</string>
    <string name="settings_menu_licence">License</string>
    <string name="settings_menu_update">Update questions (DHIS)</string>
    <string name="settings_menu_logout">Logout</string>
    <string name="settings_menu_monitoring">Monitor</string>
    <string name="login_info_username">User</string>
    <string name="login_info_password">Password</string>
    <string name="login_info_sign_in">Sign in</string>
    <string name="login_error_bad_credentials">Your user/password are incorrect</string>
    <string name="dialog_title_delete_surveys">Are you sure that you want to remove all sent surveys?</string>
    <string name="dialog_title_delete_survey">Delete Survey</string>
    <string name="dialog_info_delete_survey">Are you sure you want to completely delete this survey?</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_error_denominator">Error, denominator = 0</string>
    <string name="dialog_title_missing_selection">Missing selection</string>
    <string name="dialog_content_missing_selection">Please select Org Unit and Survey</string>
    <string name="dialog_title_existing_survey">Existing Survey</string>
    <string name="dialog_content_existing_survey">There is already a not sent form in the system for that Org Unit/Survey</string>
    <string name="dialog_content_logout_confirmation">If you exit the system, all the not sent data will be deleted. Do you still want to exit?</string>
    <string name="dashboard_info_feedback">Feedback</string>
    <string name="dashboard_info_active_assessments">Active Assessments</string>
    <string name="dashboard_info_new_assessment">New assessment</string>
    <string name="dashboard_info_future_assessments">Future Assessments</string>
    <string name="dashboard_info_performance">Performance Against Target</string>
    <string name="dashboard_info_analytics">Analytics</string>
    <string name="dashboard_button_new_survey">New Survey</string>
    <string name="dashboard_button_see_all">See all</string>
    <string name="dashboard_info_ready_to_upload">Ready to upload</string>
    <string name="dashboard_info_sent">Sent</string>
    <string name="create_info_ok">Create assessment</string>
    <string name="create_info_organization_unit">Organization Unit</string>
    <string name="create_info_survey">Survey</string>
    <string name="assessment_title_header">Pending Send</string>
    <string name="assessment_title_rdt">RDT</string>
    <string name="assessment_title_info">Info</string>
    <string name="assessment_title_facility_date">Facility / Survey</string>
    <string name="assessment_title_state">% complete</string>
    <string name="assessment_sent_title_header">Sent Surveys</string>
    <string name="assessment_sent_title_state">Status</string>
    <string name="assessment_sent_date">Date</string>
    <string name="assessment_info_delete">Delete</string>
    <string name="feedback_title_organization_unit_date">Org Unit / Date</string>
    <string name="feedback_title_header">Feedback</string>
    <string name="future_title_facility">Facility</string>
    <string name="future_title_previous_date">Date Prev. Assess.</string>
    <string name="future_title_due_date">Due date</string>
    <string name="future_title_action">Action</string>
    <string name="future_title_header">Future Assessments</string>
    <string name="performance_title_period">Period</string>
    <string name="performance_title_target">Target</string>
    <string name="performance_title_completed">Done</string>
    <string name="performance_title_achievement">Achievement</string>
    <string name="performance_title_header">Performance Against Target</string>
    <string name="analytics_title_period">Period</string>
    <string name="analytics_title_target">Target</string>
    <string name="analytics_title_completed">Done</string>
    <string name="analytics_title_achievement">Achievement</string>
    <string name="analytics_title_header">Analytics</string>
    <string name="survey_title_exit">Really Exit?</string>
    <string name="survey_info_exit">Are you sure you want to exit?</string>
    <string name="survey_info_exit_delete">The survey in progress will be deleted</string>
    <string name="survey_info_select_tab">Select Tab: </string>
    <string name="survey_title_completed">Survey completed</string>
    <string name="survey_info_completed">The survey has been successfully completed</string>
    <string name="exception_org_unit_not_valid">Outlet Code is not active for program. Contact PSI at 123456789</string>
    <string name="exception_org_unit_banned">Outlet is closed or blocked. Contact PSI at 123456789</string>
    <string name="widget_info_empty_statement">Question statement</string>
    <string name="custom_title_tallies">TALLIES - Add up and enter the totals for the following indicators from the registers in column A.  In column B enter the total numbers from the monthly reporting sheet</string>
    <string name="custom_info_tallies">TALLIES for the Month of</string>
    <string name="custom_info_one">1</string>
    <string name="custom_info_two">2</string>
    <string name="custom_info_three">3</string>
    <string name="custom_info_four">4</string>
    <string name="custom_info_five">5</string>
    <string name="custom_info_six">6</string>
    <string name="custom_info_seven">7</string>
    <string name="custom_info_eight">8</string>
    <string name="custom_info_nine">9</string>
    <string name="custom_info_ten">10</string>
    <string name="custom_info_eleven">11</string>
    <string name="custom_info_twelve">12</string>
    <string name="custom_info_thirteen">13</string>
    <string name="custom_info_fourteen">14</string>
    <string name="custom_info_fifteen">15</string>
    <string name="custom_info_sixteen">16</string>
    <string name="custom_info_seventeen">17</string>
    <string name="custom_info_eighteen">18</string>
    <string name="custom_info_nineteen">19</string>
    <string name="custom_info_twenty">20</string>
    <string name="adherence_info_switchquestion">Are there pharmacy records of ACTs dispensed?</string>
    <string name="adherence_title_explanation">Phamacy/clinical register v.s Lab records. Steps in Evaluation of Provider Adherence to Malaria Diagnostic Test Results</string>
    <string name="adherence_info_pharmacy_register">Pharmacy Register</string>
    <string name="adherence_title_gender">Gender</string>
    <string name="adherence_title_age">Age</string>
    <string name="adherence_title_test_results">Test results</string>
    <string name="adherence_info_patient_id">Patient\nID</string>
    <string name="adherence_info_prescribed">ACT\nPrescribed?</string>
    <string name="adherence_info_rdt_positive">RDT Positive</string>
    <string name="adherence_info_rdt_negative">RDT Negative</string>
    <string name="adherence_info_microscopy_positive">Microscopy Positive</string>
    <string name="adherence_info_microscopy_negative">Microscopy Negative</string>
    <string name="iqatab_info_supervisor">Supervisor</string>
    <string name="iqatab_info_parasites">Parasites/uL</string>
    <string name="iqatab_info_species">Species</string>
    <string name="iqatab_info_labstaff">Lab Staff</string>
    <string name="reporting_info_reporting">Reporting</string>
    <string name="reporting_info_results">Results</string>
    <string name="reporting_info_register">Register</string>
    <string name="reporting_info_monthly">Monthly \nReport</string>
    <string name="iqatab_info_supervisor_matches">Supervisor matches lab staff?</string>
    <string name="dynamic_error_phone_format">Invalid format for phone number ( 0NN NNN NNN{N} )</string>
    <string name="dynamic_required_field">This field is required</string>
    <string name="dynamic_error_age">Invalid age</string>
    <string name="score_title_clinical_fever">Clinical\nfever\nevaluation</string>
    <string name="score_title_rdt">RDT</string>
    <string name="score_title_avg">AVG</string>
    <string name="score_title_environment">Environment</string>
    <string name="score_title_profile">Profile</string>
    <string name="score_title_percentage">%</string>
    <string name="score_info_tab_score">Score for tab:</string>
    <string name="score_info_overall">Overall</string>
    <string name="score_info_zero_float">0.0</string>
    <string name="score_info_accumulated">Tab num/dem</string>
    <string name="score_info_case1">Case 1</string>
    <string name="score_info_case2">Case 2</string>
    <string name="score_info_case3">Case 3</string>
    <string name="score_info_case4">Case 4</string>
    <string name="compscore_title_score_percentage">Score (%)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_checkbox_show_num_dems">Show num/dems</string>
    <string name="settings_checkbox_description_show_num_dems">When activated, survey questions show their numerators and denominators, used to calc the survey score</string>
    <string name="settings_checkbox_customize_fonts">Customize fonts?</string>
    <string name="settings_list_font_sizes">Fonts size</string>
    <string-array name="settings_array_titles_font_sizes">
        <item>Extra small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>
    <string name="settings_text_dhis_server_url">DHIS Server URL</string>
    <string name="pref_header_general">General</string>
    <string name="settings_array_values_font_sizes_def">@string/font_size_level2</string>
    <string name="normal_font" translatable="false">Roboto-Medium.ttf</string>
    <string name="light_font" translatable="false">Roboto-Light.ttf</string>
    <string name="bold_font_name" translatable="false">Roboto-Bold.ttf</string>
    <string name="medium_font_name" translatable="false">Roboto-Medium.ttf</string>
    <string name="condensed_font_name" translatable="false">Roboto-Condensed.ttf</string>
    <string name="font_size_level1">small</string>
    <string name="font_size_level2">medium</string>
    <string name="textcard_default_scale">system</string>
    <string name="textcard_default_dimension">medium</string>
    <string name="progress_pull_connecting">Connecting to DHIS server ...</string>
</resources>