<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of QIS Surveillance App.
  ~
  ~  QIS Surveillance App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  QIS Surveillance App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with QIS Surveillance App.  If not, see <http://www.gnu.org/licenses/>.
  -->

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_header"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/dashboard_row_padding">

    <org.eyeseetea.malariacare.views.TextCard
        android:id="@+id/idHeader"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:background="@drawable/background_header"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/assessment_sent_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/fragment_header_title_text"
        app:tDimension="@string/font_size_level1"
        app:tFontName="@string/condensed_font_name" />
    <!--android:textSize="@dimen/dashboard_text_size"-->


    <org.eyeseetea.malariacare.views.TextCard
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:autoText="false"
        android:background="@drawable/background_header"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/assessment_title_rdt"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/fragment_header_title_text"
        app:tDimension="@string/font_size_level1"
        app:tFontName="@string/condensed_font_name" />
    <!--android:textSize="@dimen/dashboard_text_size"-->


    <org.eyeseetea.malariacare.views.TextCard
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:autoText="false"
        android:background="@drawable/background_header"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/assessment_title_info"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/fragment_header_title_text"
        app:tDimension="@string/font_size_level1"
        app:tFontName="@string/condensed_font_name" />
    <!--android:textSize="@dimen/dashboard_text_size"-->


</TableRow>