<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_weight="0.5"
        android:paddingLeft="@dimen/question_padding"
        android:paddingRight="@dimen/question_padding"
        >

        <org.eyeseetea.malariacare.views.EditCard
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom_border"
            android:inputType="number"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/input_number_edit_text"
            android:textColor="@color/intColor"
            android:maxLength="2"
            app:tDimension="@string/font_size_level2"
            app:tFontName="@string/condensed_font_name"
            />

        <org.eyeseetea.malariacare.views.CustomButton
            android:id="@+id/dynamic_positiveInt_btn"
            android:background="@drawable/option_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/send"
            android:textColor="@color/intColor"
            android:layout_margin="10dp"
            app:tDimension="@string/font_size_level2"
            app:tFontName="@string/specific_language_font"
            />

    </LinearLayout>

</TableRow>