<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of QIS Surveillance App.
  ~
  ~  QIS Surveillance App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  QIS Surveillance App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with QIS Surveillance App.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C5187"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.eyeseetea.malariacare.ProgressActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:src="@drawable/dhis2_logo" />


    <TextView
        android:id="@+id/pull_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancelPullButton"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="@string/progress_pull_connecting"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/pull_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pull_text"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:max="7"
        android:paddingTop="0dp"
        android:progress="0" />

    <org.eyeseetea.malariacare.views.CustomButton
        android:id="@+id/cancelPullButton"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:background="@drawable/button_cancel_shape"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:tDimension="@string/font_size_level1"
        app:tFontName="@string/bold_font_name" />

</RelativeLayout>
