<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Scrollable region-->
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dip">

            <!--Question-->
            <org.eyeseetea.malariacare.views.TextCard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_string"
                android:id="@+id/question"
                android:textColor="@color/white"
                android:typeface="sans"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/background_header"
                android:paddingLeft="10dip"
                app:tDimension="@string/font_size_level2"
                app:tFontName="@string/condensed_font_name" />

            <!--Options as a N x 2 grid-->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:id="@+id/options_grid"
                />
        </LinearLayout>
    <!--</ScrollView>-->

    <!--Horizontal Progress bar + text-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        >
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dynamic_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progress="5"
            android:max="10" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dynamic_progress_text"
            android:background="#00000000"
            android:layout_alignLeft="@id/dynamic_progress"
            android:layout_alignTop="@id/dynamic_progress"
            android:layout_alignRight="@id/dynamic_progress"
            android:layout_alignBottom="@id/dynamic_progress"
            android:paddingLeft="10dip"
            android:text="1/7"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="false" />
    </RelativeLayout>


</RelativeLayout>

