<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of QIS Surveillance App.
  ~
  ~  QIS Surveillance App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  QIS Surveillance App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with QIS Surveillance App.  If not, see <http://www.gnu.org/licenses/>.
  -->

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/assessment_row"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dashboard_row_padding">

    <LinearLayout
        android:id="@+id/facilityDateContainer"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <org.eyeseetea.malariacare.views.TextCard
            android:id="@+id/completionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
        <!--android:textSize="@dimen/dashboard_text_size"-->


    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusContainer"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <org.eyeseetea.malariacare.views.TextCard
            android:id="@+id/rdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
        <!--android:textSize="@dimen/dashboard_text_size"-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical">

        <org.eyeseetea.malariacare.views.TextCard
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/lorem_ipsum"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
        <!--android:textSize="@dimen/dashboard_text_size"-->


    </LinearLayout>

</TableRow>